--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,6 +6,12 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+@font-face {
+  font-family: "MyCustomFont";
+  src: url("/fonts/basic/EurostileLTProUnicode.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -13,9 +19,19 @@
     --foreground: #ededed;
   }
 }
+/* html.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
+
+html.light {
+  --background: #ffffff;
+  --foreground: #000000;
+} */
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "MyCustomFont", Arial, Helvetica, sans-serif;
+  line-height: 1;
 }
