--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
-}
+} */
 @font-face {
   font-family: "MyCustomFont";
   src: url("/fonts/basic/EurostileLTProUnicode.otf") format("opentype");
@@ -13,12 +13,12 @@
   font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) { */
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+/* } */
 /* html.dark {
   --background: #0a0a0a;
   --foreground: #ededed;
